# grid-calculus

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
docs/: CMakeLists.txt  Doxyfile.in  README.md  extract-api-reference.sh
docs/common/: preamble.tex
docs/developer-note/: README.md  api-reference.tex  main.tex
docs/developer-note/chapters/: 00-overview.tex  01-laplacian.tex  02-gradient-divergence.tex  03-domain-integration.tex  04-functional-evaluation.tex  05-explicit-euler.tex  06-rk4-integrator.tex  07-higher-order-stencils.tex  08-higher-order-derivatives.tex  09-spectral-verification.tex  10-higher-order-functional.tex  11-cahn-hilliard.tex  12-vector-tensor-fields.tex  13-finite-volume-method.tex  14-tensor-functional.tex
docs/developer-note/notes/: phase-1-laplacian.md  phase-2-gradient-divergence.md  phase-3-domain-integration.md  phase-4-functional-evaluation.md  phase-5-explicit-euler.md  phase-6-rk4-integrator.md  phase-7-higher-order-stencils.md  phase-8-higher-order-derivatives.md  phase-9-spectral-verification.md
docs/user-guide/: README.md  main.tex
docs/user-guide/chapters/: 01-hello-grid.tex  02-grid-and-laplacian.tex  03-gradient-divergence.tex  04-domain-integration.tex  05-functional-evaluation.tex  06-explicit-euler.tex  07-rk4-integrator.tex  08-higher-order-stencils.tex  09-higher-order-derivatives.tex  10-spectral-verification.tex  11-cahn-hilliard.tex  11-higher-order-functional.tex  12-cahn-hilliard.tex  13-vector-tensor-fields.tex  14-finite-volume-method.tex  15-diamond-lattice.tex  15-tensor-functional.tex
docs/user-guide/notes/: phase-1-laplacian.md  phase-2-gradient-divergence.md  phase-3-domain-integration.md  phase-4-functional-evaluation.md  phase-5-explicit-euler.md  phase-6-rk4-integrator.md  phase-7-higher-order-stencils.md  phase-8-higher-order-derivatives.md  phase-9-spectral-verification.md
examples/: CMakeLists.txt  cahn_hilliard.cpp  elastic_energy.cpp  heterogeneous_diffusion.cpp
examples/common/: cahn_hilliard.hpp  elastic_energy.hpp  heterogeneous_diffusion.hpp  vtk_writer.hpp
include/gridcalc/: version.hpp.in
include/gridcalc/core/: EigenAliases.hpp  Field.hpp  Grid.hpp  IndexPolicy.hpp
include/gridcalc/diff/: Biharmonic.hpp  Divergence.hpp  FourthOrder.hpp  Gradient.hpp  Laplacian.hpp  MixedPartial.hpp  ThirdOrder.hpp
include/gridcalc/diff/detail/: MultiIndexDerivative.hpp  PreconditionAxisExtent.hpp
include/gridcalc/func/: Functional.hpp  Integrate.hpp
include/gridcalc/fvm/: CellLaplacian.hpp
include/gridcalc/solve/: Diffusion.hpp  ExplicitEuler.hpp  Integrator.hpp  RK4.hpp
include/gridcalc/spectral/: Derivatives.hpp  Fft.hpp  Wavenumbers.hpp
include/gridcalc/stencil/: CentralDifference.hpp  FirstDerivative.hpp  FourthDerivative.hpp  ThirdDerivative.hpp
include/gridcalc/tensor/: Contraction.hpp  Expressions.hpp
scripts/: build-docs.sh  check-since.py  fetch-docs.sh  get-docs.sh  render-docs.sh  render_ch_snapshots.py  render_diffusion_snapshots.py  render_elastic_snapshots.py
specs/: CLAUDE.md  STATUS.md  mission.md  roadmap.md  tech-stack.md
specs/2026-05-01-phase-0-project-scaffold/: plan.md  requirements.md  validation.md
specs/2026-05-01-phase-1-laplacian/: plan.md  requirements.md  validation.md
specs/2026-05-02-phase-2-gradient-divergence/: plan.md  requirements.md  validation.md
specs/2026-05-02-phase-3-domain-integration/: plan.md  requirements.md  validation.md
specs/2026-05-02-phase-4-functional-evaluation/: plan.md  requirements.md  validation.md
specs/2026-05-02-phase-5-explicit-euler/: plan.md  requirements.md  validation.md
specs/2026-05-02-phase-6-rk4-integrator/: plan.md  requirements.md  validation.md
specs/2026-05-02-phase-8-higher-order-derivatives/: plan.md  requirements.md  validation.md
specs/2026-05-03-phase-10-documentation-infra/: plan.md  requirements.md  validation.md
specs/2026-05-03-phase-11-higher-order-functional/: plan.md  requirements.md  validation.md
specs/2026-05-03-phase-12-cahn-hilliard/: plan.md  requirements.md  validation.md
specs/2026-05-03-phase-7-higher-order-stencils/: plan.md  requirements.md  validation.md
specs/2026-05-03-phase-9-spectral-verification/: plan.md  requirements.md  validation.md
specs/2026-05-04-audit-spectral-nyquist-zeroing/: plan.md  requirements.md  validation.md
specs/2026-05-04-fix-fvm-D-grid-and-cfl-tightening/: plan.md  requirements.md  validation.md
specs/2026-05-04-fix-grid-mismatch-in-integrator/: plan.md  requirements.md  validation.md
specs/2026-05-04-fix-odd-N-fftfreq/: plan.md  requirements.md  validation.md
specs/2026-05-04-fix-stencil-aliasing-on-small-axes/: plan.md  requirements.md  validation.md
specs/2026-05-04-phase-13-vector-tensor-fields/: plan.md  requirements.md  validation.md
specs/2026-05-04-phase-14-finite-volume-method/: plan.md  requirements.md  validation.md
specs/2026-05-05-fix-leaf-dangling-and-fused-integrate-perf/: plan.md  requirements.md  validation.md
specs/2026-05-05-phase-15-tensor-functional/: plan.md  requirements.md  validation.md
test/: CMakeLists.txt  cahn_hilliard_test.cpp  diffusion_test.cpp  divergence_test.cpp  elastic_energy_demo_test.cpp  elastic_energy_test.cpp  fd_fft_crosscheck_test.cpp  field_test.cpp  func_evaluate_vector_test.cpp  functional_test.cpp  fvm_cell_laplacian_test.cpp  fvm_diffusion_acceptance_test.cpp  fvm_grid_mismatch_test.cpp  gradient_test.cpp  grid_equality_test.cpp  grid_test.cpp  heterogeneous_diffusion_test.cpp  higher_order_test.cpp  index_policy_test.cpp  integrate_test.cpp  integrator_grid_mismatch_test.cpp  integrator_test.cpp  laplacian_test.cpp  pfc_functional_test.cpp  phase_8_test.cpp  spectral_basic_test.cpp  spectral_partial_nyquist_test.cpp  spectral_wavenumbers_test.cpp  stencil_axis_extent_test.cpp  tensor_expressions_test.cpp  tensor_grid_mismatch_test.cpp  tensor_leaf_lifetime_test.cpp  vector_tensor_test.cpp  version_test.cpp  vtk_writer_test.cpp
(+2 files in other folders)
